dataset1235/2025-2/1153765216/users/230013788/executions/2372395858_1092214117.log
== SUBMISSION (2025-08-28 18:53:03)
-- CODE: 
print(round(9,80 * 20,00 * 15%))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:53:04)
-- CODE: 
print(round(9,80 * 20,00 * 15%))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 1
    print(round(9,80 * 20,00 * 15%))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
